New end point /domains-aliases/filterByDomain
